updated domain entity list to be a real listview

--- a/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/values/strings.xml
+++ b/android-weblogic-monitorProject/android-weblogic-monitor/src/main/res/values/strings.xml
@@ -95,5 +95,6 @@
     <string name="cpu_usage">CPU Usage</string>
     <string name="title_server_list">Servers</string>
     <string name="title_server_detail">Server Detail</string>
+  <string name="entities">Entities</string>
 
 </resources>
